# PubMed-Radar

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml  post-create.sh
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  Dockerfile  cli.py  conftest.py  manage.py  pyproject.toml  requirements.txt  ruff.toml
backend/apps/papers/: admin.py  factories.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/papers/migrations/: 0001_initial.py
backend/apps/papers/tests/: test_filters.py  test_papers.py  test_tasks.py
backend/apps/radars/: admin.py  apps.py  factories.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/radars/migrations/: 0001_initial.py  0002_initial.py
backend/apps/radars/tests/: test_fetch_action.py  test_radars.py  test_tasks.py
backend/apps/users/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/tests/: test_auth.py
backend/apps/web/: forms.py  throttling.py  urls.py  views.py
backend/apps/web/tests/: test_api_session.py  test_auth_pages.py
backend/config/: settings.py  urls.py
backend/services/: pubmed_client.py  summarizer.py
backend/services/tests/: test_pubmed_client.py  test_summarizer.py
backend/static/css/: app.css
backend/static/js/: api.js  dashboard.js
backend/templates/: base.html
backend/templates/registration/: login.html  register.html
backend/templates/web/: dashboard.html
docs/superpowers/plans/: 2026-06-11-procrastinate-llm-pipeline.md  2026-06-11-session-auth-frontend-skeleton.md  2026-06-12-dashboard-ui.md
docs/superpowers/specs/: 2026-06-11-procrastinate-llm-pipeline-design.md  2026-06-11-session-auth-frontend-skeleton-design.md  2026-06-12-dashboard-ui-design.md
