[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pubmed-radar-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django==5.1.4",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "django-cors-headers==4.6.0",
    "psycopg2-binary==2.9.10",
    "python-decouple==3.8",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-django==4.9.0",
    "factory-boy==3.3.1",
    "Faker==33.1.0",
    "ruff==0.9.1",
]

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501", "F401"]
"*/tests/*" = ["F811"]
