[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pubmed-radar-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django==5.1.4",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "django-cors-headers==4.6.0",
    "psycopg2-binary==2.9.10",
    "python-decouple==3.8",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-django==4.9.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "factory-boy==3.3.1",
    "Faker==33.1.0",
    "ruff==0.9.1",
    "typer>=0.12",
]

[project.scripts]
cli = "cli:app"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]

[tool.pyright]
typeCheckingMode = "basic"
ignore = ["**/migrations", "**/notebooks"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
testpaths = ["apps", "services"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
asyncio_mode = "auto"
timeout = 60
markers = ["acceptance: marks acceptance/integration tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["migrations", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]
